fix: extensions input placeholder cut off (#5161)

--- a/static/css/parts/InputBox.css
+++ b/static/css/parts/InputBox.css
@@ -52,6 +52,8 @@
   contain: strict;
   resize: none;
   overflow: hidden;
+  white-space: pre;
+  text-overflow: ellipsis;
 }
 
 .InputBox::placeholder,
